Fix language select alignment and add background color

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -47,7 +47,9 @@ p {
     top: 0;
   }
 }
-
+#index-banner{
+  background-color: lightblue;
+}
 .icon-block {
   padding: 0 15px;
 }
@@ -57,4 +59,7 @@ p {
 
 footer.page-footer {
   margin: 0;
+}
+.language_select{
+  margin: auto 36%;
 }
